--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
                 <h1>Este es el titulo atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar
                     las cosas incleibles qie se pueden hacer con las ramas </p>
+                <p>Los blogs son la mejor forma de compartir informacion y tus ideas.
+                    Mucho mas que ir a conferencias o salir en Youtube.Excepto si eres
+                    rockstart. Pero estadisticamente no lo eres... por ahora   </p>
             </div>
         </div>  
     </body>
