--- a/blogpost.html
+++ b/blogpost.html
@@ -11,9 +11,9 @@
               <span id="tagline">Tu blog de cabecera</span>
           </div>
             <div id="post">
-                <h1>Este es el tìtulo atractivo e interesante del post</h1>
-                <p>Y este es el pàrrafo de inicio donde vamos a explicar
-                    las cosas incleìbles que se pueden hacer con las ramas </p>
+                <h1>Este es el t&iacute;tulo atractivo e interesante del post</h1>
+                <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar
+                    las cosas incle&iacute;bles que se pueden hacer con las ramas </p>
                 <p>Los blogs son la mejor forma de compartir informacion y tus ideas.
                     Mucho mas que ir a conferencias o salir en Youtube.Excepto si eres
                     rockstart. Pero estadisticamente no lo eres... por ahora   </p>
